--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ body{
     display: flex;
     flex-direction: row;
     align-items: center;
-    /* border: solid 2px black; */
+    border: solid 2px black;
     margin-top: 50px;
     
       
